--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -1,23 +1,34 @@
 @import 'colores';
 .aligncenter {
-    padding-top: 15%;
-
-    @media (max-width:767px) {
-        text-align: center;
+    padding-top: 10%;
+    text-align: center;
+    margin: 0 auto;
+    @media (max-width:991px) {
+        
         padding: 50px!important;
         
     }
 }
-
+.color-sticky {
+    background-color: rgba(0, 0, 0, 0.712);
+    margin-top: -82px;
+    @media (max-width:991px) {
+        
+        background-color: rgb(0, 0, 0);
+        margin-top: 0;
+        
+    }
+}
 .nav-padding {
     padding: 20px 0px;
     
 }
 .nav-tamano {
     font-size: 1.4rem;
+    text-align: center;
+    padding-top: 10px;
 }
 .border-bottomNew {
-    border-bottom: 1px solid $color-blanco ;
 }
 
 .animation-nav{
