--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,8 @@ img {
 }
 
 .color-sticky {
-  background-color: rgba(0, 0, 0, 0);
-  margin-top: -82px;
+  background-color: rgba(0, 0, 0, 0.932);
+  margin-top: -92px;
 }
 @media (max-width: 991px) {
   .color-sticky {
@@ -109,7 +109,7 @@ img {
 }
 
 .nav-tamano {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   text-align: center;
   padding-top: 10px;
 }
@@ -135,6 +135,14 @@ img {
   .img-banner img {
     width: 55%;
   }
+}
+
+.header__nav--logo {
+  padding-top: 10px;
+}
+.header__nav--logo:hover {
+  transform: scale(1.05);
+  transition: all 1s;
 }
 
 .fondo {
@@ -176,6 +184,82 @@ img {
 
 .font-header {
   font-size: 1.8rem;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.embed-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.menus-btn {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+}
+
+.menus-btn:focus {
+  box-shadow: none;
+}
+
+.menus-btn__burger {
+  width: 40px;
+  height: 6px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  transition: all 0.5s ease-in-out;
+}
+
+.menus-btn__burger::before,
+.menus-btn__burger::after {
+  margin-left: -20px;
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 6px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  transition: all 0.5s ease-in-out;
+}
+
+.menus-btn__burger::before {
+  transform: translateY(-16px);
+}
+
+.menus-btn__burger::after {
+  transform: translateY(16px);
+}
+
+/* ANIMATION */
+.menus-btn.open .menus-btn__burger {
+  transform: translateX(-50px);
+  background: transparent;
+  box-shadow: none;
+}
+
+.menus-btn.open .menus-btn__burger::before {
+  transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menus-btn.open .menus-btn__burger::after {
+  transform: rotate(-45deg) translate(35px, 35px);
 }
 
 .row-padding {
@@ -339,6 +423,7 @@ img {
 
 .text-alignconstruccion {
   text-align: center;
+  margin: auto;
 }
 .text-alignconstruccion h3 {
   font-size: 3rem;
