--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -10,8 +10,8 @@
     }
 }
 .color-sticky {
-    background-color: rgba(0, 0, 0, 0);
-    margin-top: -82px;
+    background-color:rgba(0, 0, 0, 0.932);
+    margin-top: -92px;
     @media (max-width:991px) {
         
         background-color: rgb(0, 0, 0);
@@ -24,12 +24,11 @@
     
 }
 .nav-tamano {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     text-align: center;
     padding-top: 10px;
 }
-.border-bottomNew {
-}
+
 
 .animation-nav{
     animation-duration: 3s;
@@ -57,6 +56,14 @@
     }
         
     }
+}
+.header__nav--logo {
+    padding-top: 10px;
+    &:hover {
+        transform: scale(1.05);
+        transition: all 1s;
+    }
+
 }
 
 .fondo {
@@ -99,4 +106,18 @@ background-attachment: fixed;
 .font-header {
     font-size: 1.8rem;
 }
-//
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
