--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,12 @@ div {
   animation-name: aparecernav;
   animation-iteration-count: initial;
 }
-.header__nav .header__nav--logo {
+.header__nav--logo {
   flex-grow: 1;
   flex-basis: 10%;
   padding: 10px 0px;
 }
-.header__nav .header__nav--logo:hover {
+.header__nav--logo:hover {
   transform: scale(1.05);
   transition: all 1s;
 }
