--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,15 +146,34 @@ img {
 }
 
 .fondo {
+  min-height: 600px;
+  height: 100vh;
   background-position: center;
   background: no-repeat;
   background-size: 100% 100%;
-  background: linear-gradient(30deg, #000000, #1f030363), url(../img/fondo-02.jpg);
+  background: linear-gradient(30deg, #000000e7, #1f03031f), url(../img/fondo-02.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
+  /*
+  Prueba de linea
+  &::after {
+
+  height: 100vh;
+          background-image: url(../img/trama.png);
+          background-repeat: no-repeat;
+          background-position: bottom;
+          background-size: contain;
+          content: "";
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          z-index: 0;
+      }*/
 }
 .fondo img {
   width: 100%;
@@ -422,7 +441,6 @@ img {
 }
 
 .text-alignconstruccion {
-  text-align: center;
   margin: auto;
 }
 .text-alignconstruccion h3 {
@@ -446,6 +464,63 @@ img {
   margin: 0 auto;
 }
 
+.cards-list {
+  z-index: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.card {
+  margin: 30px auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(88, 88, 88, 0.397);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.card .card_image {
+  width: inherit;
+  height: inherit;
+  border-radius: 10px;
+}
+
+.card .card_image img {
+  width: inherit;
+  height: inherit;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.card .card_title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: -80px;
+  height: 40px;
+  color: white;
+  text-shadow: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.637);
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+}
+
+.title-white {
+  color: white;
+}
+
+@media all and (max-width: 1260px) {
+  .card-list {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
+}
 .footer__color {
   background-color: #2e2e2e;
 }
