--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -67,18 +67,40 @@
 }
 
 .fondo {
+    //el tamaño minimo
+    min-height: 600px;
+    //Utilizar el tamaño total de la pantalla
+    height: 100vh;
     background-position:center;
     background: no-repeat;
     background-size:  100% 100%;
-    background: linear-gradient(30deg, #000000, #1f030363),url(../img/fondo-02.jpg);
+    background: linear-gradient(30deg, #000000e7, #1f03031f),url(../img/fondo-02.jpg);
     -webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-background-attachment: fixed;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
     img {
         width: 100%;
     }
+
+    /*
+    Prueba de linea
+    &::after {
+
+    height: 100vh;
+            background-image: url(../img/trama.png);
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-size: contain;
+            content: "";
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            z-index: 0;
+        }*/
 }
 
 .banner {
