--- a/assets/sass/card.scss
+++ b/assets/sass/card.scss
@@ -15,6 +15,7 @@
   box-shadow: 0 0 10px rgba(88, 88, 88, 0.397);
     cursor: pointer;
     transition: 0.4s;
+    background-color: #00000000;
  
     
   }
