modficaciones con equipo leones

--- a/assets/sass/colores.scss
+++ b/assets/sass/colores.scss
@@ -9,3 +9,5 @@ $color-gris:rgb(66, 66, 66);
 $color-complementario:#fdc751;
 $color-footer:#2e2e2e;
 $color-menu:#3b55e6d7;
+$transition: .5s;
+$black-color: #212529;
