--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,28 +489,25 @@ img {
 
 .card {
   margin: 30px auto;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 320px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(88, 88, 88, 0.397);
   cursor: pointer;
   transition: 0.4s;
   background-color: #00000000;
 }
-
 .card .card_image {
   width: inherit;
   height: inherit;
   border-radius: 10px;
 }
-
 .card .card_image img {
   width: inherit;
   height: inherit;
   border-radius: 10px;
   object-fit: cover;
 }
-
 .card .card_title {
   text-align: center;
   border-radius: 0px 0px 40px 40px;
@@ -522,7 +519,6 @@ img {
   color: white;
   text-shadow: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.637);
 }
-
 .card:hover {
   transform: scale(0.9, 0.9);
 }
@@ -537,6 +533,89 @@ img {
     flex-direction: column;
   }
 }
+.section-texth3 {
+  color: white;
+  font-size: 5rem;
+  font-weight: 600;
+  padding-bottom: 10px;
+}
+
+.separacion {
+  margin-left: 20px;
+}
+
+.work-card {
+  margin-bottom: 30px;
+  position: relative;
+  transition: 0.5s;
+}
+.work-card::before {
+  content: "";
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.637));
+  width: 100%;
+  height: 90%;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  border-radius: 8px;
+  transition: 0.5s;
+  z-index: 1;
+}
+.work-card:hover::before {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.work-card img {
+  border-radius: 8px;
+  width: 100%;
+}
+.work-card .content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 30px 35px;
+  transition: 0.5s;
+  z-index: 5;
+}
+.work-card .content span {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+.work-card .content span a {
+  color: #ffff;
+  text-decoration: none;
+}
+.work-card .content h3 {
+  font-size: 22px;
+  line-height: 1.4;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+.work-card .content .work-btn {
+  background-color: #ffff;
+  color: #3B55E6;
+  padding: 10px 20px 5px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+.work-card .content .work-btn:hover {
+  background-color: #212529;
+  color: #ffff;
+}
+.work-card .content a {
+  color: #ffff;
+  text-decoration: none;
+}
+.work-card:hover::before {
+  height: 100%;
+  background-image: linear-gradient(to bottom, rgba(219, 131, 30, 0), #008cff);
+}
+.work-card:hover .content {
+  bottom: 20px;
+}
+
 .footer__color {
   background-color: #2e2e2e;
 }
