--- a/scss/style.scss
+++ b/scss/style.scss
@@ -788,3 +788,13 @@ div {
 .hola {
 	color: red;
 }
+
+.rojo {
+	background-color: red;
+}
+.azul {
+	background-color: blue;
+}
+.verde {
+	background-color: green;
+}
