--- a/assets/sass/reset.scss
+++ b/assets/sass/reset.scss
@@ -16,9 +16,9 @@ body {
     background-color: $color-blanco;
   }
 .paddingtop {
-    padding: 110px;
+    padding: 20vh 0px;
     @media (max-width:991px) {
-        padding: 30px 10px;
+       
         }
 }
 ol,
