--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,14 +18,8 @@ body {
 }
 
 .paddingtop {
-  padding: 110px;
+  padding: 20vh 0px;
 }
-@media (max-width: 991px) {
-  .paddingtop {
-    padding: 30px 10px;
-  }
-}
-
 ol,
 ul {
   padding-left: 0px;
@@ -89,7 +83,7 @@ img {
 }
 @media (max-width: 991px) {
   .aligncenter {
-    padding: 50px !important;
+    padding: 50px;
   }
 }
 
@@ -106,6 +100,11 @@ img {
 
 .nav-padding {
   padding: 20px 0px;
+}
+@media (max-width: 991px) {
+  .nav-padding {
+    padding: 0px;
+  }
 }
 
 .nav-tamano {
@@ -266,7 +265,7 @@ img {
   transform: translateY(16px);
 }
 
-/* ANIMATION */
+/* animacion */
 .menus-btn.open .menus-btn__burger {
   transform: translateX(-50px);
   background: transparent;
@@ -285,7 +284,7 @@ img {
   padding: 20px 0px;
 }
 .row-padding .border-cajas {
-  margin: 30px;
+  margin: 15px;
   padding: 30px;
   box-shadow: 0px 0px 10px rgba(88, 88, 88, 0.14);
   border-radius: 3rem;
@@ -316,7 +315,7 @@ img {
 }
 @media (max-width: 467px) {
   .row-padding .border-cajas {
-    margin: 60px;
+    margin: 20px;
     padding: 50px;
   }
   .row-padding .border-cajas img {
@@ -325,7 +324,7 @@ img {
 }
 @media (min-width: 468px) and (max-width: 767px) {
   .row-padding .border-cajas {
-    margin: 100px;
+    margin: 50px;
     padding: 30px 50px;
   }
   .row-padding .border-cajas img {
@@ -334,7 +333,7 @@ img {
 }
 @media (min-width: 768px) and (max-width: 1000px) {
   .row-padding .border-cajas {
-    margin: 30px;
+    margin: 10px;
     padding: 30px;
   }
   .row-padding .border-cajas img {
@@ -477,6 +476,7 @@ img {
 
 .linea-inferior {
   background-color: #3B55E6;
+  margin-top: -30px;
 }
 
 .cards-list {
@@ -511,9 +511,7 @@ img {
 .card .card_title {
   text-align: center;
   border-radius: 0px 0px 40px 40px;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 20px;
+  font-size: 2rem;
   margin-top: -80px;
   height: 40px;
   color: white;
@@ -539,6 +537,11 @@ img {
   font-weight: 600;
   padding-bottom: 10px;
 }
+@media all and (max-width: 680px) {
+  .section-texth3 {
+    font-size: 3rem;
+  }
+}
 
 .separacion {
   margin-left: 20px;
@@ -562,7 +565,7 @@ img {
   z-index: 1;
 }
 .work-card:hover::before {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.096);
 }
 .work-card img {
   border-radius: 8px;
@@ -578,18 +581,24 @@ img {
   transition: 0.5s;
   z-index: 5;
 }
+@media (max-width: 767px) {
+  .work-card .content {
+    padding: 10px 25px;
+  }
+}
 .work-card .content span {
   display: block;
   margin-bottom: 10px;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 .work-card .content span a {
   color: #ffff;
   text-decoration: none;
+  font-size: 1.5rem;
 }
 .work-card .content h3 {
-  font-size: 22px;
-  line-height: 1.4;
+  font-size: 1.7rem;
+  line-height: 1.9rem;
   margin-bottom: 20px;
   text-decoration: none;
 }
@@ -598,7 +607,7 @@ img {
   color: #3B55E6;
   padding: 10px 20px 5px;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 .work-card .content .work-btn:hover {
   background-color: #212529;
@@ -610,7 +619,7 @@ img {
 }
 .work-card:hover::before {
   height: 100%;
-  background-image: linear-gradient(to bottom, rgba(219, 131, 30, 0), #008cff);
+  background-image: linear-gradient(to bottom, rgba(219, 131, 30, 0), black);
 }
 .work-card:hover .content {
   bottom: 20px;
@@ -633,7 +642,7 @@ img {
 }
 .footer-enlaces ul li a {
   font-size: 1.5rem;
-  text-decoration: none !important;
+  text-decoration: none;
   color: #ffff;
 }
 
