--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -15,7 +15,7 @@
         li{
             a{
                 font-size: 1.5rem;
-                text-decoration: none!important;
+                text-decoration: none;
                 color: $color-blanco;
             }
            
