--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
     @media (max-width:991px) {
         
-        padding: 50px!important;
+        padding: 50px;
         
     }
 }
@@ -21,6 +21,11 @@
 }
 .nav-padding {
     padding: 20px 0px;
+    @media (max-width:991px) {
+        
+        padding: 0px;
+        
+    }
     
 }
 .nav-tamano {
